--- a/nginx-usage.conf
+++ b/nginx-usage.conf
@@ -27,15 +27,13 @@ server {
 
         listen       3005 ;
         server_name  localhost;
-        error_log C:/nginx-1.14.0/logs/dianrong.err.log;
+        error_log C:/nginx-1.14.0/logs/dianrong.err.log; //log输出路径
 
         location / {
-            # rewrite ^.* C:/Users/zhangs2/dianrong/eloan_v2_frontend/build/ break;
             # root  https://www-demo.dianrong.com/mkt/npm502/eloan_v2_frontend;
             # try_files $uri /index.html;
              rewrite ^/(.*) /mkt/eloan_v2_frontend/index.html break;
              proxy_pass https://www-demo.dianrong.com;
-            #  proxy_pass http://localhost:3000;
         }
 
         error_page 404 /404.html;
