--- a/nginx-usage.conf
+++ b/nginx-usage.conf
@@ -3,11 +3,10 @@ server {
     server_name localhost;
     location / {
         # proxy_pass  http://localhost:3000/;
-        # root C:\Users\zhangs2\dianrong\frontend-business\packages\fintech-cloud-home\build\;
         # root C:/Users/zhangs2/dianrong/frontend-business/packages/fintech-cloud/build/;
-        # index index.html;
         alias C:/Users/zhangs2/dianrong/eloan_v2_frontend/build/;
-        # autoindex off;
+        # alias 后面必须要用 “/” 结束，否则会找不到文件，而 root 则对 ”/” 可有可无
+        # alias 只能作用在location中，而root可以存在server、http和location中
     }
 }   
 
@@ -27,10 +26,11 @@ server {
 
         listen       3005 ;
         server_name  localhost;
-        error_log C:/nginx-1.14.0/logs/dianrong.err.log; //log输出路径
+        error_log C:/nginx-1.14.0/logs/dianrong.err.log;
 
         location / {
-            # root  https://www-demo.dianrong.com/mkt/npm502/eloan_v2_frontend;
+            # root  https://www-demo.dianrong.com/mkt/npm502/eloan_v2_frontend; 错误的写法
+            # root和alias只能作为path在本地服务器上使用，不能用url的格式
             # try_files $uri /index.html;
              rewrite ^/(.*) /mkt/eloan_v2_frontend/index.html break;
              proxy_pass https://www-demo.dianrong.com;
@@ -61,28 +61,6 @@ server {
 #     include default.d/allow_office.acl;
 #     include default.d/allow_3rdparty.acl;
 #     deny all;
-
-#     location ~* ^/eeloan/api {
-#         proxy_pass http://dianrong_demo_eeloanweb;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real_IP $remote_addr;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-
-#         client_max_body_size         300m;
-#         client_body_buffer_size      256k;
-
-#     }
-
-#     location /borrower {
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header Cookie $http_cookie;
-#         proxy_cookie_domain loanapp-demo.dianrong.com eloan-demo.dianrong.com;
-#         proxy_pass http://dianrong_demo_b8_facade;
-#     }
 
 #     location / {
 #         set $www_host "www-demo.dianrong.com";
